--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,11 +10,11 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 </head>
 <body>
   <bfy-app>Loading...</bfy-app>
-
-  
 
     {{#each scripts.polyfills}}<script src="{{.}}"></script>{{/each}}
     <script>
@@ -23,9 +23,6 @@
       }).catch(console.error.bind(console));
     </script>
 
-  
-
-
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
 </body>
 </html>
