--- a/client/src/index.html
+++ b/client/src/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 </head>
-<body>
+<body style="background-color: #ebf4f8">
   <bfy-app>Loading...</bfy-app>
 
     {{#each scripts.polyfills}}<script src="{{.}}"></script>{{/each}}
@@ -23,6 +23,8 @@
       }).catch(console.error.bind(console));
     </script>
 
+    <script src="https://use.fontawesome.com/700796f3b0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
 </body>
 </html>
