--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Bfy</title>
+  <title>Book 4 you</title>
   <base href="/">
 
   {{#unless environment.production}}
